# rt-sch-cli-equity-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  ruff.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
databricks/: README.md  add_inits.sh  batch_svi_load.py  streaming_notebook.py
databricks/bronze/: 01_climate_bronze_stream.py
databricks/silver/: 02_climate_silver_clean.py
databricks/snowflake/: 03_silver_to_snowflake.py
databricks/utils/: config.py  gcs_paths.py  schema.py  snowflake_options.py
dataproc/: kafka_streaming.py
dataproc/config/: spark_snowflake.properties
dataproc/jobs/: load_svi_to_snowflake.py  smoke_test.py
dbt/: README.md  dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql
dbt/models/bronze/: bronze_svi.sql  bronze_svi.yml
dbt/models/silver/: silver_svi_enriched.sql  silver_svi_enriched.yml
dbt/models/svi/bronze/: bronze_svi.sql  bronze_svi.yml
dbt/models/svi/gold/: gold_climate_vulnerability.sql  gold_sources.yml
dbt/models/svi/silver/: silver_svi_enriched.sql  silver_svi_enriched.yml
dbt/seeds/climate/: dim_climate_metric_definition.csv  dim_climate_question.csv  schema.yml
dbt/seeds/svi/: dim_svi_definition.csv  schema.yml
docs/: business_definitions.md  data_dictionary.md  glossary.md  metrics_catalog.md  project_overview.md
infra/terraform/: README.md
jinja_templates/: config.yml  dbt_env_template.yml.j2  generate_sql.py  metric_query.sql.j2  table_schema.sql.j2
kafka/: kafka_producer.py  requirements.txt
powerbi/: README.md
powerbi/exports/: NYC_Climate_SVI_Dashboard.pbix
rag-ui/src/: App.tsx
rag_service/: README.md  api.py  config.py  embeddings.py  ingest.py  langchain_chain.py  main.py  prompts.py  vector_store.py
rt_databricks/: README.md
rt_databricks/bronze/: 01_bronze_ingest.py
rt_databricks/notebooks/: 00_test_snowflake_secure.ipynb  01_spark_gcp_test.ipynb  02_bronze_test.ipynb  03_test_silver.ipynb  04_test_final.ipynb
rt_databricks/silver/: 02_silver_school_climate.py
rt_databricks/utils/: gcs_paths.py  snowflake_options.py
rt_databricks/workflows/: streaming_notebook.py
screenshots/: readme.md
scripts/: alt_load_svi_to_snowflake.py
scripts/gcp/: fetch_climate_to_gcs.py  fetch_svi_to_gcs.py
scripts/gcp/gcp_cli/: bucket_setup.sh  dataproc_exec.sh  secret_creation.sh
scripts/snowflake/: alt_load_svi_to_snowflake.py
snowflake/: readme.md
snowflake/connectors/: sf_connector_example.py
snowflake/create_objects/: 00_create_database.sql  01_create_schemas.sql  02_create_roles.sql  04_create_warehouses.sql
snowflake/integration/: 10_create_storage_integration.sql  11_create_stage_gcs.sql  12_grant_integration_privileges.sql
snowflake/queries/: 20_validate_climate_load.sql  21_validate_svi_load.sql
tests/: __init__.py
tests/integration/: test_sanity_integration.py  test_svi_pipeline_flow.py
tests/unit/: __init__.py  test_example_transform.py  test_sanity_unit.py
